[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/miscs/DetectionArea/DetectionArea.gd" type="Script" id=1]

[sub_resource type="CylinderShape" id=1]
radius = 100.0
height = 15.0

[node name="DetectionArea" type="Area"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_DetectionArea_body_exited"]
